# native_exif

./: pubspec.yaml
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
macos/: native_exif.podspec
macos/Classes/: NativeExifPlugin.h  NativeExifPlugin.m  NativeExifPlugin.swift
windows/: CMakeLists.txt  native_exif_plugin.cpp  native_exif_plugin.h  native_exif_plugin_c_api.cpp  native_exif_windows.cpp
windows/include/native_exif/: native_exif_plugin_c_api.h
windows/test/: native_exif_plugin_test.cpp
